--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <label for="xpPerGame">How much XP do earn each game (on average)?</label><br>
   <input id="xpPerGame" type="text" placeholder="Type the XP here..."></input><br>
   <button onclick="calculate()">Calculate!</button>
-  <h2>You will need to grind for about:<h2>
+  <h2>You will need to grind for about:</h2>
       <br>
       <p class="big-text"></p>
       <script src="main.js"></script>
